<resources>
    <string name="app_name">七圈密码</string>
    <string name="app_name_debug">七圈密码 (调试)</string>
    <string name="splash_q">Q</string>
    <string name="slogan">简单、安全、易用的密码记录本</string>
    <string name="copyright">Copyright 2017–2020 LiYing. All Rights Reserved.</string>
    <string name="version">当前版本：v%s</string>
    <string name="title_add_password">添加密码</string>
    <string name="title_edit_password">修改密码</string>
    <string name="title_export_password">导出密码</string>
    <string name="title_import_password">导入密码</string>
    <string name="title_create_key">创建主密码</string>
    <string name="title_update_key">更改主密码</string>
    <string name="title_create_pattern_key">创建图案密码</string>
    <string name="title_create_number_key">创建数字密码</string>
    <string name="title_create_complex_key">创建复杂密码</string>
    <string name="title_pattern_unlock">图案密码解锁</string>
    <string name="title_about">关于</string>
    <!--左侧抽屉菜单项-->
    <string name="group_password_count">%1$s 密码个数：%2$d</string>
    <string name="menu_group">分组</string>
    <string name="menu_operation">操作</string>
    <string name="group_default">默认分组</string>
    <string name="group_all">[ 所有密码 ]</string>
    <string name="group_add">添加分组</string>
    <!--主菜单项-->
    <string name="action_function">更多功能</string>
    <string name="action_add">添加密码</string>
    <string name="action_search">搜索</string>
    <string name="action_modify_main">修改主密码</string>
    <string name="action_import_export">导入与导出</string>
    <string name="action_other">其他功能</string>
    <string name="action_distinct">密码去重</string>
    <string name="action_delete_all">删除所有密码</string>
    <string name="action_about">关于</string>
    <string name="action_export">导出到存储卡</string>
    <string name="action_import">从存储卡导入</string>
    <string name="action_save">保存</string>
    <string name="action_exit">退出</string>

    <!--Pattern Lock View-->
    <string name="please_connect_at_least_4_points">请连接至少 4 个点</string>
    <string name="please_draw_unlock_pattern">请绘制解锁图案</string>
    <string name="connect_at_least_4_points">至少连接 4 个点，请重试</string>
    <string name="meet_requirement">满足要求</string>
    <string name="please_try_again_later">请 %ds 之后重试</string>
    <string name="pattern_correct">图案正确</string>
    <string name="pattern_wrong_try_again_later">图案错误，请 %ds 之后重试</string>
    <string name="pattern_wrong_try_again">图案错误，你还可以再尝试 %d 次</string>
    <string name="pattern_redraw">重新绘制</string>
    <string name="done">完成</string>

    <string name="navigation_drawer_open">打开分组列表</string>
    <string name="navigation_drawer_close">关闭分组列表</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="add_password_title_hint">输入标题（必填）</string>
    <string name="add_password_name_hint">输入用户名</string>
    <string name="add_password_password_hint">输入密码</string>
    <string name="add_password_email_hint">输入绑定的邮箱</string>
    <string name="add_password_note_hint">输入备注</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="title">标题</string>
    <string name="isTop">置顶</string>
    <string name="group">分组</string>

    <string name="just">刚刚</string>
    <string name="minute_ago">%d分钟前</string>
    <string name="hour_ago">%d小时前</string>

    <string name="loading_passwords">正在加载密码数据…</string>
    <string name="no_passwords">该分组下没有密码</string>
    <string name="info_group_exist">该分组已经存在</string>
    <string name="title_can_not_be_empty">标题不可用空</string>
    <string name="password_has_been_deleted">该条密码已经被删除</string>
    <string name="share_to">分享到</string>
    <string name="can_not_share">无法分享</string>
    <string name="copy_username">复制 用户名 到剪贴板</string>
    <string name="copy_username_done">已复制用户名到剪贴板</string>
    <string name="copy_password">复制 密码 到剪贴板</string>
    <string name="copy_password_done">已复制密码到剪贴板</string>
    <string name="copy_email">复制 邮箱 到剪贴板</string>
    <string name="copy_email_done">已复制邮箱到剪贴板</string>
    <string name="copy_note">复制 备注 到剪贴板</string>
    <string name="copy_note_done">已复制备注到剪贴板</string>
    <string name="nothing_to_copy">无需复制</string>
    <string name="alert_delete_message">删除后不可恢复，确定删除？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="create_new_group">创建新分组</string>
    <string name="enter_new_group_name">输入新分组名称</string>
    <string name="group_exists">分组名称已存在</string>
    <string name="group_name_can_not_be_empty">分组名不可为空</string>
    <string name="group_added">“%s” 分组已添加</string>
    <string name="password_added_to_new_group">“%1$s”密码已更改分组为：%2$s</string>
    <string name="new_password_added_to_group">“%1$s”密码已添加到分组：%2$s</string>
    <string name="can_not_change_this_group">不允许更改该分组</string>
    <string name="update_group_name">修改分组名</string>
    <string name="merge_group">合并分组到…</string>
    <string name="delete_group">删除分组</string>
    <string name="group_deleted">“%s” 分组已删除</string>
    <string name="delete_group_message">将删除 “%s” 分组下的所有密码，而且无法恢复，确定要删除吗？</string>
    <string name="group_name_has_been_update">分组名已更改为 “%s”</string>
    <string name="no_group_can_be_merge">没有分组可合并</string>
    <string name="group_merged">“%s” 分组已被合并到 “%s” 分组</string>
    <string name="password_added">“%s” 密码已添加</string>
    <string name="password_updated">“%s” 密码已更新</string>
    <string name="export_no_encrypted">以非加密方式导出</string>
    <string name="export_encrypted">以加密方式导出</string>
    <string name="export_no_encrypted_tip">导出的文件以文本形式保存，其内容不经过任何加密，请务必注意文件的安全。</string>
    <string name="export_encrypted_tip">导出的文件以文本形式保存，其内容中的密码部分使用AES加密算法进行加密，请将密钥填写在下面。</string>
    <string name="export_key_hint">加密密钥</string>
    <string name="export_encrypted_warning">注意：请务必牢记此加密密钥，因为导入密码的时候需要你再次填写此密钥。</string>
    <string name="start_export">开始导出</string>
    <string name="key_can_not_be_empty">密钥不能为空</string>
    <string name="export_success">所有密码导出成功，密码保存文件名为：%s</string>
    <string name="i_known">我知道了</string>
    <string name="exporting">正在导出，请稍候…</string>
    <string name="reading_passwords">正在读取密码…</string>
    <string name="insert_password_fail">插入密码失败</string>
    <string name="read_password_fail">读取密码失败</string>
    <string name="permission_write_rationale">导出密码需要有写存储空间的权限</string>
    <string name="write_permission_not_granted">请求权限被拒绝，导出失败</string>
    <string name="permission_read_rationale">导入密码需要有读存储空间的权限</string>
    <string name="read_permission_not_granted">请求权限被拒绝，无法导入</string>

    <string name="create_key_options">请选择主密码类型</string>
    <string name="create_key_tip">&#160;&#160;&#160;&#160;主密码是进入密码本的唯一凭据，请务必牢记，丢失之后无法找回。同时，为了你的密码数据的安全，推荐使用复杂密码作为主密码。</string>
    <string name="key_pattern_lock">图案密码</string>
    <string name="key_number_lock">数字密码</string>
    <string name="key_complex_lock">复杂密码（推荐）</string>
    <string name="key_no_lock">不创建主密码（不推荐）</string>
    <string name="no_key_message">如果不创建主密码，密码本中的密码将不会以加密的方式存储，你确定不需要创建主密码？</string>
    <string name="key_updated">主密码已更新</string>
    <string name="applying_key_changes">正在应用更改…</string>
    <string name="updating_please_wait">正在更新密码数据，请稍等片刻…</string>
    <string name="restarting_app">Restarting App&#8230;</string>
    <string name="clear_input">清除</string>

    <string name="key_length_can_not_too_short">主密码长度不可以小于 %d 位</string>
    <string name="please_enter_number_key">请输入 %1$d – %2$d 位的数字密码</string>
    <string name="please_enter_complex_key">请输入 %1$d – %2$d 位的复杂密码</string>
    <string name="key_max_length_tip">主密码最多 %d 位</string>
    <string name="key_wrong_try_again">主密码错误，你还可以再尝试 %d 次</string>
    <string name="key_wrong_try_again_later">主密码错误，请 %ds 之后重试</string>

    <string name="import_password_tip">请把%1$s文件放在存储卡的 %2$s 目录下，点击下面的文件名完成导入。</string>
    <string name="search_files_fail">没有搜索到%1$s文件，请确认 %2$s 目录下是否存在%1$s文件。</string>
    <string name="import_file_fail">文件已损坏，密码导入失败！</string>
    <string name="import_enter_key">输入密钥</string>
    <string name="import_enter_key_hint">请输入导出密码时使用的加密密钥</string>
    <string name="import_key_can_not_be_empty">密钥不可为空</string>
    <string name="import_key_wrong">抱歉，密钥不正确</string>
    <string name="importing">正在导入，请稍候…</string>
    <string name="imported">导入完成，一共导入 %d 个密码</string>
    <string name="import_zero">文件中无密码数据</string>
    <string name="importing_please_wait">请稍候操作…</string>
    <string name="parsing_password_file">正在解析文件…</string>
    <string name="importing_passwords">%d 个密码正在导入…</string>
    <string name="delete_file">删除文件</string>
    <string name="delete_file_message">删除 %1$s ?</string>
    <string name="delete_fail">删除失败</string>
    <string name="refresh_file_list">刷新文件列表</string>

    <string name="search_passwords">搜索密码</string>
    <string name="enter_search_keyword">请输入搜索关键字</string>
    <string name="search">搜索</string>
    <string name="search_keyword_can_not_be_empty">搜索关键词不可为空</string>
    <string name="search_result">搜索结果</string>
    <string name="search_result_is_empty">搜索结果空</string>

    <string name="distinct_tip">此操作将会删除重复的密码。\n\n注：只有当两个密码的标题、用户名、密码、邮箱和备注均完全一致(区分大小写)时才会被认为是重复的密码。</string>
    <string name="start_distinct">开始去重</string>
    <string name="distincting">正在去重…</string>
    <string name="no_password_data">没有密码数据</string>
    <string name="duplicate_passwords_found">已找到 %d 个重复密码…</string>
    <string name="deleting_duplicate_passwords">正在删除重复的密码…</string>
    <string name="remove_duplicate_passwords_count">本次共删除 %d 个重复密码。</string>
    <string name="delete_all_password">删除所有密码</string>
    <string name="delete_all_password_message">此操作将删除已保存的所有密码，不可恢复。\n为了避免密码丢失，你可以先将所有密码导出到存储卡保存。\n\n确定要删除吗？</string>
    <string name="export_passwords">导出密码</string>
    <string name="delete_passwords">删除密码</string>
    <string name="fetching_all_password">正在获取全部密码…</string>
    <string name="press_again_to_exit">再按一次，退出应用</string>

    <string name="about_declare">应用部分界面参考了开源项目： o602075123/MyPassword</string>
    <string name="open_source_url">开源地址</string>
    <string name="share_app">分享应用</string>
    <string name="feedback">意见反馈</string>
    <string name="about_author">关于作者</string>
    <string name="about_github_url">liying2008/QPassword</string>
    <string name="about_email">liruoer2008@yeah.net</string>
    <string name="about_author_name">\@独毒火</string>
    <string name="author_weibo_url">http://weibo.com/neuliying</string>
    <string name="github">GitHub</string>
    <string name="author_github">https://github.com/liying2008</string>
    <string name="jianshu">简书</string>
    <string name="author_jianshu_url">http://www.jianshu.com/u/14ab91761183</string>
    <string name="csdn">CSDN</string>
    <string name="author_csdn_url">http://blog.csdn.net/u012939909</string>
    <string name="personal_website">个人网站</string>
    <string name="personal_website_url">http://duduhuo.cc/</string>
    <string name="browser_not_found">未安装浏览器</string>
    <string name="open_url">https://github.com/liying2008/QPassword</string>
    <string name="copy_url">复制地址</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="url_copied">URL已复制</string>
    <string name="share_description">“%1$s” 是一款用来保存你的各类账号及密码的软件，你只需要记住一个主密码即可轻松管理保存的所有密码，大大减轻了记忆负担。\n\n下载地址：%2$s 。</string>
    <string name="email_subject">%s - 用户反馈</string>
    <string name="email_app_not_found">你没有安装邮件类应用，已将作者邮箱地址复制到剪贴板</string>
    <string name="email_pre_text">%s（以上数据由应用自动收集，发送邮件时请不要删除）。</string>
    <string name="author_email">邮箱</string>
    <string name="author_weibo">微博</string>
</resources>
