<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_function"
        android:icon="@drawable/ic_menu"
        android:orderInCategory="1"
        android:title="@string/action_function"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_modify_main"
                android:icon="@drawable/ic_main_key"
                android:orderInCategory="2"
                android:title="@string/action_modify_main"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_import_export"
                android:icon="@drawable/ic_import_export"
                android:orderInCategory="3"
                android:title="@string/action_import_export"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/action_export"
                        android:icon="@drawable/ic_export"
                        android:orderInCategory="3"
                        android:title="@string/action_export"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/action_import"
                        android:icon="@drawable/ic_import"
                        android:orderInCategory="3"
                        android:title="@string/action_import"
                        app:showAsAction="never"/>
                </menu>
            </item>
            <item
                android:id="@+id/action_distinct"
                android:icon="@drawable/ic_distinct"
                android:orderInCategory="4"
                android:title="@string/action_distinct"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_info"
                android:orderInCategory="5"
                android:title="@string/action_about"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="always"/>
</menu>
